fixed z-index

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
+  z-index: 100;
 }
 
 .header {
